8305972: Update XML Security for Java to 3.0.2
Reviewed-by: mbaesken
Backport-of: f0aebc8141de5a50c88658a40caa01967a9afc53